# mantis-ai

./: .gitignore  README.md  example_usage.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: README.md  api-reference.md  index.md  installation.md
docs/images/: architecture.md  architecture.txt
docs/use-cases/: google-drive-integration.md  index.md  meetings.md  slack-integration.md  zoom-integration.md
documentation/: README.md  mkdocs.yml  requirements.txt
documentation/docs/: README.md  api-reference.md  concepts.md  index.md  installation.md  migration-guide.md  quickstart.md
documentation/docs/use-cases/: microsoft-teams-integration.md
mantis/: __init__.py  cli.py  extract.py  models.py  response_schemas.py  structured.py  summarize.py  transcription.py  utils.py
tests/: conftest.py  test_base_model.py  test_cli_output.py  test_error_handling.py  test_extract.py  test_model_selection.py  test_progress_reporting.py  test_structured_output.py  test_summarize.py  test_transcription.py  test_utils.py
